fix: 新增日历预览

--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.1.0",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10",
+    "@kangc/v-md-editor": "2.3.17",
     "@vueuse/core": "9.1.1",
     "@wangeditor/editor": "5.1.1",
     "@wangeditor/editor-for-vue": "5.1.12",
-    "@kangc/v-md-editor": "2.3.17",
-    "echarts": "5.4.3",
     "axios": "0.27.2",
     "cropperjs": "1.5.12",
-    "maku-form-design": "1.1.0",
+    "echarts": "5.4.3",
     "element-plus": "2.3.14",
+    "maku-form-design": "1.1.0",
     "mitt": "3.0.0",
     "nprogress": "0.2.0",
     "pinia": "2.0.30",
     "print-js": "1.6.0",
     "qrcode.vue": "3.3.3",
     "qs": "6.10.3",
+    "sortablejs": "^1.15.0",
     "vue": "3.3.4",
     "vue-i18n": "9.1.9",
     "vue-router": "4.2.5",
-    "sortablejs": "^1.15.0",
     "vxe-table": "^4.3.10",
     "xe-utils": "^3.5.7"
   },
